--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="./images/profile.jpg" width = "150" height = "175" alt="" /></span>
+					<span class="image avatar"><img src="./images/profile.JPG" width = "150" height = "175" alt="" /></span>
 					<h1 id="logo"><a href="#">Joanna Borba</a></h1>
 					<p>Software Engineer by day<br />
 						college student by night.</p>
