change color scheme and banner

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/flat-lay-banner.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -78,10 +78,11 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3> <a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf">Resume</a></h3>
-									<p>Resume is available for download <a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf">here</a>.</p>									<div class="features">
+									<h3>Resume</a></h3>
+									<p>Resume is available for download <a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf">here</a>.</p>									
+									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/resume.PNG" alt="" /></a>
+											<a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf" class="image"><img src="images/resume.PNG" alt="" /></a>
 										</article>
 									</div>
 								</div>
