--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>About</h2>
-										<p>Just a software engineer aspiring to be a professor one day</p>
+										<p>Just a software engineer aspiring to be a professor</p>
 									</header>
-									<p>Joanna is a software engineer professional currently pursing her Master's in Computer Science at Old Dominion University while simultaneoulsy working full-time in the fintech industry. When not working or studying Joanna enjoys travelling outside of Texas in pursuit of delicious foods and great waves to surf. The times Joanna is in Texas she can be found at a local bar for trivia nights or outside hanging with her pup, Shiloh.</p>
+									<p>I am a full-time software engineer professional in the fintech industry and simultaneoulsy pursuing my Master's in Computer Science at Old Dominion University part-time. When I am now working or studying I enjoy the local trivia bar scenes with friends or exploring the trails and outdoors with my pup, Shiloh. The long periods of time I am able to escape from work and school I use to travel the country in pursuit of delicious food and waves to surf!</p>
+									<!-- <p>Joanna is a software engineer professional currently pursing her Master's in Computer Science at Old Dominion University while simultaneoulsy working full-time in the fintech industry. When not working or studying Joanna enjoys travelling outside of Texas in pursuit of delicious foods and great waves to surf. The times she is in Texas she can be found at a local bar for trivia nights or outside hanging with her pup, Shiloh.</p> -->
 								</div>
 							</section>
 
@@ -79,7 +80,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Resume</a></h3>
-									<p>Resume is available for download <a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf">here</a>.</p>									
+									<p>My resume is available for download <a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf">here</a>.</p>									
 									<div class="features">
 										<article>
 											<a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf" class="image"><img src="images/resume.PNG" alt="" /></a>
