update resume with border

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<p>My resume is available for download <a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf">here</a>.</p>									
 									<div class="features">
 										<article>
-											<a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf" class="image"><img src="images/resume.PNG" alt="" /></a>
+											<a href="./downloadables/Borba_Resume.pdf" download="Joanna_Borba_Resume.pdf" class="image"><img style="border: 1px solid gray;"src="images/resume.PNG" alt=""  /></a>
 										</article>
 									</div>
 								</div>
