--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="./images/profile.JPG" width = "150" height = "175" alt="" /></span>
 					<h1 id="logo"><a href="#">Joanna Borba</a></h1>
-					<p>Software Engineer by day<br />
-						college student by night.</p>
+					<p>Software engineer by day,<br />
+						College student by night.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -55,7 +55,7 @@
 										<h2>About</h2>
 										<p>Just a software engineer aspiring to be a professor!</p>
 									</header>
-									<p>I am a full-time software engineer professional in the fintech industry and simultaneoulsy pursuing my Master's in Computer Science at Old Dominion University part-time. When I am not working or studying, I enjoy the local trivia bar scenes with friends or exploring the trails and outdoors with my pup, Shiloh. The longer periods of time I am able to escape from work and school I use to travel the country in pursuit of delicious foods and waves to surf! Upon completing my Master's degree I hope to pursue a career in higher education to help encourage the next generation of computer scientists!</p>
+									<p>I am a full-time software engineer professional in the fintech industry and simultaneoulsy pursuing my Master's in Computer Science at Old Dominion University part-time. When I am not working or studying, I enjoy the local Dallas, TX trivia bar scenes with friends and exploring hiking trails with my pup, Shiloh. The longer periods of time I am able to escape from both work and school I use to travel the country in pursuit of delicious foods and fun waves to surf! Upon completing my Master's degree I hope to pursue a career in higher education to help encourage the next generation of computer scientists!</p>
 									<!-- <p>Joanna is a software engineer professional currently pursing her Master's in Computer Science at Old Dominion University while simultaneoulsy working full-time in the fintech industry. When not working or studying Joanna enjoys travelling outside of Texas in pursuit of delicious foods and great waves to surf. The times she is in Texas she can be found at a local bar for trivia nights or outside hanging with her pup, Shiloh.</p> -->
 								</div>
 							</section>
